--- a/scripts/nodejs/package.json
+++ b/scripts/nodejs/package.json
@@ -1,10 +1,10 @@
 {
   "name": "slothy-nodejs",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Client for slothy framework",
   "main": "slothy.js",
   "scripts": {
-    "test": "api = Api('localhost', 8000)"
+    "test": "app = App('localhost:8000')"
   },
   "keywords": [
     "Slothy",
