--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,17 @@
 *˜
-templates.js
-compiler.html
 *.pyc
 .svn
 .DS_Store
 .DS_Store?
 ._*
 .idea/
-djangoplus/.idea/*
 .Spotlight-V100
 .Trashes
-ehthumbs.db
-Thumbs.db
 .project
-.pydevproject
-.settings/*
 sqlite.db
 db.sqlite3
 media
 dist/
-djangoplus.egg-info/
 */dist/
 */*egg-info/
-geckodriver.log
-videos/*
-build
+slothy/admin/static/app
